fix(swagger): :bug: Correccion de funcionalidad de validaciones
Se corrigio la funcionalidad de validaciones, etc
